# ChessComputer

./: .gitignore  Cargo.toml  README.md  Trunk.toml  cobertura.xml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml  lints.yml  rust.yml  rustfmt.yml
assets/fens/: random.fen  test_position.fen
chess_computer/: all.html  fn.main.html  index.html  sidebar-items.js
chess_computer/castling_rights/: index.html  sidebar-items.js  struct.CastlingRights.html
chess_computer/chess_board/: constant.BOARD_SIZE.html  enum.GameEndStatus.html  enum.PieceColor.html  enum.PieceType.html  fn.game_end_checker.html  fn.make_move.html  fn.reset_board_state.html  fn.setup.html  index.html  sidebar-items.js  struct.BoardPosition.html  struct.ChessBoard.html  struct.ChessBoardPlugin.html  struct.GameEndStatusIter.html  struct.PieceColorIter.html  struct.PieceCreateEvent.html  struct.PieceMoveEvent.html  struct.PieceTypeIter.html  struct.RequestMoveEvent.html  struct.ResetBoardEvent.html
chess_computer/fen/: constant.STARTING_FEN.html  index.html  sidebar-items.js  struct.Fen.html
chess_computer/ui/: fn.mouse_event_handler.html  fn.setup.html  fn.ui_system.html  index.html  sidebar-items.js  struct.BoardClickEvent.html  struct.MainCamera.html  struct.UIPlugin.html
implementors/strum/: trait.IntoEnumIterator.js
src/: castling_rights.rs  chess_board.rs  core.rs  fen.rs  main.rs  ui.rs
src/chess_board/: castling_rights.rs  move.rs  piece.rs  piece_move.rs
src/chess_computer/: fen.rs.html  (+4 more)
(+110 files in other folders)
