[package]
name = "chess_computer"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
dyn-clone = "1.0"
strum = "0.24"
strum_macros = "0.24"
cargo-tarpaulin = "0.26.1"

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
  "render",
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "hdr",
  "filesystem_watcher",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.14"
default-features = false
features = [
  "wav",
]
